--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "express": "^4.13.3"
   },
   "devDependencies": {
+    "angular-mocks": "^1.4.7",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-tslint": "^3.3.0",
-    "gulp-typescript": "^2.9.2"
+    "gulp-typescript": "^2.9.2",
+    "karma": "^0.13.14",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-jasmine": "^0.3.6"
   }
 }
