--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-tslint": "^3.3.0",
     "gulp-typescript": "^2.9.2",
     "karma": "^0.13.14",
+    "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.18"
