--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "angular-mocks": "^1.4.7",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-nodemon": "^2.0.4",
     "gulp-tslint": "^3.3.0",
     "gulp-typescript": "^2.9.2",
     "karma": "^0.13.14",
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.18"
+    "phantomjs": "^1.9.18",
+    "wrench": "^1.5.8"
   }
 }
