--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
 - 4.2.2
 script: node_modules/karma/bin/karma start karma.conf.js --single-run
+before_script:
+- bower install
 deploy:
   provider: heroku
   api_key:
