--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-	"postInstall": "bower install"
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/TeemuKoivisto/peliMaailma#readme",
   "dependencies": {
+    "bower": "^1.6.5",
     "express": "^4.13.3"
   },
   "devDependencies": {
