--- a/gulp.config
+++ b/gulp.config
@@ -1,6 +1,6 @@
 module.exports = function() {
 	var config = {
-		allTs: './public/app/**/*.ts',
+		allTs: './client/app/**/*.ts',
 		typings: './typings/**/*.d.ts'
 	};
 	
