vaihdettu css flexboxiin

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+	"test": "node_modules/mocha/bin/mocha",
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
