--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.18",
-    "wrench": "^1.5.8"
+    "phantomjs": "^1.9.18"
   }
 }
